--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+
+    <div class="class1
+  ">
+<h1>FSD lab work  </h1></div>
+
     <h1>Heading 1</h1>
     <h2>Heading 2</h2>
     <h3>Heading 3</h3>
@@ -30,6 +35,17 @@
 
 tr:nth-child(even) {
   background-color: rgb(201, 201, 201);
+}
+
+.class1{
+  background-color: rgba(236, 61, 61, 0.479);
+  width: 300px;
+  text-align: center;
+  border-radius: 10px;
+  box-shadow: 10px 10px 20px rgb(121, 116, 116);
+  margin-left: auto;  
+  margin-right: auto;
+  font-family: 'classic';
 }
   </style>
 
@@ -88,5 +104,7 @@ tr:nth-child(even) {
       <dt>CSS</dt>
       <dd>Cascading Style Sheets</dd>
     </dl>
+
+  <hr>
 </body>
 </html>
