--- a/portfolio-project/index.html
+++ b/portfolio-project/index.html
@@ -15,19 +15,29 @@
 
 </head>
 <body>
-  <header>
-    <nav>
-      <div class="left">Ayush Kushwaha</div>
-        <div class ="right">
-        <ul>
-          <li><a href="#home">Home</a></li>
-          <li><a href="#about">About Me</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </div>
-    </nav>
-  </header>
+ <header>
+  <nav>
+    <div class="left">Ayush Kushwaha</div>
+    <div class="right">
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About Me</a></li>
+        
+        <!-- Dropdown Menu -->
+        <li class="dropdown">
+          <a href="#projects">Projects ▾</a>
+          <ul class="dropdown-menu">
+            <li><a href="#webdev">Web Development</a></li>
+            <li><a href="#python">Python</a></li>
+            <li><a href="#appdev">App Development</a></li>
+          </ul>
+        </li>
+        
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
+</header>
    <main>
     <section class="first section"></section>
    </main>
